--- a/frontend/src/ui/styles/components/players_table.scss
+++ b/frontend/src/ui/styles/components/players_table.scss
@@ -8,33 +8,24 @@ players-table {
   $danKyuWidth: 35px;
   $lastGameDateWidth: 100px;
 
-  @mixin cardLegendGridDesktop {
+  @mixin cardLegendGrid {
     display: grid;
     grid-template-columns:
       tu.$refWidth tu.$pictureWidthHeight tu.$playerNameWidth tu.$countryFlagsWidth
       tu.$eloWidth $danKyuWidth $lastGameDateWidth $gamesTotalWidth;
     grid-column-gap: tu.$columnGap;
+
+    @media (max-width: g.$desktopWidth) {
+      grid-template-columns:
+        tu.$refWidth tu.$pictureWidthHeight tu.$playerNameWidth
+        tu.$countryFlagsWidth tu.$eloWidth $danKyuWidth;
+    }
   }
 
   route-link.card,
   #legend {
-    @include cardLegendGridDesktop;
+    @include cardLegendGrid;
   }
 
   @include tu.completeTableDecoration;
-
-  @media (max-width: g.$desktopWidth) {
-    @mixin cardLegendGridMobile {
-      display: grid;
-      grid-template-columns:
-        tu.$refWidth tu.$pictureWidthHeight tu.$playerNameWidth
-        tu.$countryFlagsWidth tu.$eloWidth $danKyuWidth;
-      grid-column-gap: tu.$columnGap;
-    }
-
-    route-link.card,
-    #legend {
-      @include cardLegendGridMobile;
-    }
-  }
 }
