minor improvement to the player-view

--- a/frontend/local/index.css
+++ b/frontend/local/index.css
@@ -29,7 +29,7 @@ route-link:hover {
 }
 
 main {
-  max-width: 1000px;
+  max-width: 1050px;
   margin: auto;
   padding-top: 20px;
   padding-left: 10px;
@@ -178,7 +178,7 @@ game-records-table #legend {
   margin-bottom: 10px;
   font-weight: bold;
 }
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
   game-records-table .non-mobile {
     display: none !important;
   }
@@ -196,7 +196,7 @@ game-records-table .meta {
   justify-content: center;
   align-items: center;
 }
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
   game-records-table .meta {
     grid-template-columns: 90px 100px !important;
     grid-column-gap: 40px !important;
@@ -211,7 +211,7 @@ game-records-table #legend {
   grid-template-columns: 15px 305px 305px 320px;
   grid-column-gap: 10px;
 }
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
   game-records-table route-link.card,
 game-records-table #legend {
     display: grid;
@@ -228,7 +228,7 @@ game-records-table #legend .meta {
     align-items: center;
   }
 }
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
   game-records-table #legend {
     display: none;
   }
@@ -246,7 +246,7 @@ players-table #legend {
   grid-template-columns: 15px 70px 75px 40px 40px 35px 100px 65px;
   grid-column-gap: 10px;
 }
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
   players-table route-link.card,
 players-table #legend {
     grid-template-columns: 15px 70px 75px 40px 40px 35px;
@@ -355,7 +355,7 @@ players-table #legend {
   margin-bottom: 10px;
   font-weight: bold;
 }
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
   players-table .non-mobile {
     display: none !important;
   }
@@ -367,7 +367,7 @@ game-events-table #legend {
   grid-template-columns: 15px 160px 75px 65px 90px 90px;
   grid-column-gap: 10px;
 }
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
   game-events-table route-link.card,
 game-events-table #legend {
     grid-template-columns: 15px 160px 75px 90px;
@@ -476,7 +476,7 @@ game-events-table #legend {
   margin-bottom: 10px;
   font-weight: bold;
 }
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
   game-events-table .non-mobile {
     display: none !important;
   }
@@ -591,7 +591,7 @@ player-view #name img {
   border-radius: 10px;
 }
 player-view #player-personal-card {
-  margin-left: -40px;
+  margin-left: -80px;
   display: flex;
   flex-direction: row;
 }
@@ -605,7 +605,7 @@ player-view #player-personal-card .align-left {
   justify-content: left;
   text-align: left;
 }
-player-view #player-personal-card #player-personal-card-content {
+player-view #player-personal-card #content {
   display: grid;
   grid-template-columns: 1fr;
   grid-row-gap: 10px;
@@ -621,25 +621,25 @@ player-view #player-personal-card #player-personal-card-content {
   margin-bottom: 10px;
   align-items: center;
 }
-player-view #player-personal-card #player-personal-card-content:hover {
+player-view #player-personal-card #content:hover {
   box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
   transform: translate3d(0px, -0.5px, 0px);
 }
-player-view #player-personal-card #player-personal-card-content route-link {
+player-view #player-personal-card #content route-link {
   color: #000066;
 }
-player-view #player-personal-card #player-personal-card-content span[winner] {
+player-view #player-personal-card #content span[winner] {
   color: #005200;
 }
-player-view #player-personal-card #player-personal-card-content span[loser] {
+player-view #player-personal-card #content span[loser] {
   color: #660000;
 }
-player-view #player-personal-card #player-personal-card-content img {
+player-view #player-personal-card #content img {
   max-width: 70px;
   max-height: 70px;
   border-radius: 10px;
 }
-player-view #player-personal-card #player-personal-card-legend {
+player-view #player-personal-card #legend {
   display: grid;
   grid-template-columns: 1fr;
   grid-row-gap: 10px;
@@ -648,8 +648,11 @@ player-view #player-personal-card #player-personal-card-legend {
   font-weight: bold;
   padding: 10px 10px;
 }
+player-view #player-personal-card #legend span {
+  justify-content: end;
+}
 
-@media (min-width: 1000px) {
+@media (min-width: 1050px) {
   players-view {
     display: flex;
     justify-items: center;
