--- a/frontend/local/index.css
+++ b/frontend/local/index.css
@@ -671,27 +671,9 @@ game-record-view #glift {
   height: 500px;
 }
 game-record-view #players-names {
-  display: grid;
-  grid-template-columns: 290px max-content max-content max-content max-content max-content 290px;
-  grid-template-rows: max-content;
-  grid-column-gap: 15px;
-  grid-template-areas: "black-dot black-name black-picture vs white-picture white-name white-dot";
-  align-items: center;
-}
-game-record-view #players-names h2 {
   display: flex;
+  flex-direction: column;
   gap: 15px;
-  align-items: center;
-}
-game-record-view #players-names h2#black {
-  justify-content: end;
-}
-game-record-view #players-names h2#white {
-  justify-content: start;
-}
-game-record-view #players-names svg {
-  width: 50px;
-  height: 50px;
 }
 game-record-view #players-names img {
   max-width: 90px;
@@ -706,6 +688,33 @@ game-record-view #players-names span[winner] {
 }
 game-record-view #players-names span[loser] {
   color: #660000;
+}
+game-record-view #players-names #black,
+game-record-view #players-names #white {
+  display: grid;
+  grid-template-columns: 50px max-content;
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
+  align-items: center;
+}
+game-record-view #players-names route-link {
+  display: flex;
+  gap: 15px;
+  display: grid;
+  grid-template-columns: 90px 150px max-content max-content;
+  grid-column-gap: 15px;
+  align-items: center;
+}
+game-record-view #players-names route-link span {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+game-record-view #players-names route-link img {
+  margin: 0 auto;
+}
+game-record-view #players-names svg {
+  width: 50px;
+  height: 50px;
 }
 game-record-view #card span:not(.align-left) {
   display: flex;
