--- a/frontend/src/ui/styles/views/player_view.scss
+++ b/frontend/src/ui/styles/views/player_view.scss
@@ -5,7 +5,7 @@
 player-view {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100px 255px 350px 1fr;
+  grid-template-rows: 100px 500px 350px 1fr;
   grid-row-gap: 20px;
   grid-template-areas: "name" "metadata" "elo-graph" "game-records";
   justify-items: center;
@@ -61,6 +61,13 @@ player-view {
     #content {
       @include cardLegendGrid;
       @include tu.card;
+      
+      #nationalities {
+        display: flex;
+        gap: 5px;
+        
+        justify-content: center;
+      }
     }
 
     #legend {
