--- a/frontend/src/ui/styles/components/table_utils.scss
+++ b/frontend/src/ui/styles/components/table_utils.scss
@@ -49,7 +49,7 @@
 @mixin captionDecoration {
   h2 {
     display: flex;
-    justify-content: center;
+    margin: 0 auto;
 
     margin-bottom: 10px;
 
@@ -93,6 +93,7 @@ $pictureWidthHeight: 70px;
   align-items: center;
 
   margin-bottom: 10px;
+  margin-right: 10px;
 
   font-weight: bold;
 }
