--- a/frontend/src/ui/styles/views/game_record_view.scss
+++ b/frontend/src/ui/styles/views/game_record_view.scss
@@ -92,6 +92,9 @@ game-record-view {
 
     a#download {
       padding: 8px;
+      
+      width: max-content;
+      margin: 0 auto;
 
       border: 2px solid lighten(black, 40%);
       border-radius: 4px;
