--- a/frontend/src/ui/styles/components/table_utils.scss
+++ b/frontend/src/ui/styles/components/table_utils.scss
@@ -49,6 +49,7 @@
 @mixin captionDecoration {
   h2 {
     display: flex;
+    justify-content: center;
     margin: 0 auto;
 
     margin-bottom: 10px;
@@ -188,6 +189,8 @@ $columnGap: 10px;
   @include pagination;
   @include loaderContainer;
   @include completeCardLegendDecoration;
+  
+  margin-top: 30px;
 
   @media (max-width: g.$desktopWidth) {
     .non-mobile {
